# agentic-platform

./: .gitignore  README.md
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  validate_8010.ps1
apps/api/app/: auth.py  config.py  cost_guard.py  logging_config.py  main.py  monitoring.py  rate_limit.py  redis_state.py  schemas.py  uav_state.py
apps/api/app/agent/: __init__.py  graph.py  guardrails.py  hitl.py  mcp_adapter.py  multi_agent.py  prompts.py  react.py  tools.py
apps/api/app/data/: __init__.py  backends.py  chunking.py  hybrid_search.py  models.py  rag_pipeline.py  store.py
apps/api/app/integration/: __init__.py  command_bridge.py
apps/api/app/llm/: base.py  catalog.py  providers.py  router.py
apps/api/app/ml/: __init__.py  lora.py  quantization.py
apps/api/app/observability/: __init__.py  langsmith.py
apps/api/tools/: esim_bridge_example.py  mavsdk_bridge_service.py  ros2_bridge_service.py
apps/web/: Dockerfile  index.html  package-lock.json  package.json
apps/web/src/: App.tsx  api.ts  styles.css
apps/web/src/components/: Chat.tsx  UavDashboard.css  UavDashboard.tsx
infra/: docker-compose.yml
