[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-platform-api"
version = "0.1.0"
description = "Agentic platform API with ReAct runtime, RAG, and production middleware"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.115.0",
	"uvicorn[standard]>=0.30.0",
	"pydantic>=2.8.0",
	"pydantic-settings>=2.3.0",
	"redis[hiredis]>=5.0.7",
	"langgraph>=0.2.0",
	"langchain-core>=0.2.0",
	"langsmith>=0.1.0",
	"httpx>=0.27.0",
	"orjson>=3.10.0",
	"python-dotenv>=1.0.1",
]
